Ajustado o repository e a services, alterado campos na view

--- a/Vendas.dproj
+++ b/Vendas.dproj
@@ -159,6 +159,7 @@
             <Form>frmCadCliente</Form>
             <FormType>dfm</FormType>
         </DCCReference>
+        <DCCReference Include="src\services\uClienteService.pas"/>
         <BuildConfiguration Include="Base">
             <Key>Base</Key>
         </BuildConfiguration>
